# vofa-NEXT

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.codewhale/state/: subagents.v1.json
.github/workflows/: build.yml  release.yml
.pnpm-store/v11/: index.db
app/: Cargo.toml
app/src/: app.rs  main.rs  settings.rs  theme.rs
app/src/core/: mod.rs  notify.rs
app/src/core/pipeline/: data_loop.rs  decoder_feed.rs  graph_eval.rs  spectrum_sync.rs
app/src/core/services/: buffer.rs  can.rs  can_load.rs  frame_decoder.rs  graph.rs  logic.rs  mod.rs  protocol.rs  transport.rs
app/src/core/state/: app_state.rs  mod.rs
app/src/ui/: controls.rs  dock.rs  mod.rs  node_editor.rs  toasts.rs
app/src/ui/displays/: can.rs  logic.rs  mod.rs  raw_data.rs  spectrum.rs  waveform.rs
app/src/ui/layout/: activity_bar.rs  menu.rs  mod.rs  sidebar.rs  status_bar.rs
app/src/ui/panels/: mod.rs  protocol.rs  settings.rs  transport.rs  widget_palette.rs
crates/vofa-next-automotive/src/: can_backend.rs  lib.rs
crates/vofa-next-buffer/: Cargo.toml
crates/vofa-next-buffer/src/: graph.rs  lib.rs
crates/vofa-next-core/src/: can.rs  config.rs  diagnostic.rs  frame.rs  logic.rs
crates/vofa-next-dsp/src/: filter.rs  lib.rs  spectrum.rs  window.rs
crates/vofa-next-nodes/src/: frame_decoder.rs  lib.rs  math_op.rs
crates/vofa-next-protocol/src/: candle.rs  engine.rs  lib.rs  rawdata.rs  slcan.rs
crates/vofa-next-transport/: Cargo.toml
crates/vofa-next-transport/src/: manager.rs  serial.rs  slcan.rs  test_data.rs  udp.rs
scripts/: build.sh  patch_cmdsender.cjs  patch_remaining.cjs  patch_widgetnode.cjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/serial-core/: Cargo.toml
src-tauri/crates/serial-core/src/: config.rs  frame.rs
src-tauri/crates/serial-transport/: Cargo.toml
src-tauri/crates/serial-transport/src/: manager.rs  serial.rs  tcp.rs  test_data.rs  udp.rs
src-tauri/crates/serial-vofa/: Cargo.toml
src-tauri/crates/serial-vofa/src/: engine.rs  firewater.rs  justfloat.rs  lib.rs  rawdata.rs
src-tauri/crates/vofa-next-automotive/: Cargo.toml
src-tauri/crates/vofa-next-automotive/src/: can_backend.rs  engine.rs  error.rs  isotp.rs
src-tauri/crates/vofa-next-buffer/src/: graph.rs  lib.rs
src-tauri/crates/vofa-next-core/: Cargo.toml
src-tauri/crates/vofa-next-core/src/: can.rs  config.rs  diagnostic.rs  error.rs  lib.rs  logic.rs
src-tauri/crates/vofa-next-dsp/: Cargo.toml
src-tauri/crates/vofa-next-dsp/src/: filter.rs  lib.rs  spectrum.rs  window.rs
src-tauri/crates/vofa-next-nodes/: Cargo.toml
src-tauri/crates/vofa-next-nodes/src/: frame_decoder.rs  lib.rs
src-tauri/crates/vofa-next-protocol/: Cargo.toml
src-tauri/crates/vofa-next-protocol/src/: candle.rs  engine.rs  firewater.rs  justfloat.rs  lib.rs  logic_decoder.rs  slcan.rs
src-tauri/crates/vofa-next-transport/: Cargo.toml
src-tauri/crates/vofa-next-transport/src/: can_backend.rs  candle.rs  lib.rs  manager.rs  serial.rs  slcan.rs  tcp.rs  test_data.rs  udp.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  notify.rs  state.rs
src-tauri/src/commands/: buffer.rs  can.rs  can_load.rs  debug.rs  frame_decoder.rs  graph.rs  logic.rs  protocol.rs  transport.rs  window.rs
src-tauri/src/pipeline/: data_loop.rs  decoder_feed.rs  graph_eval.rs  mod.rs  spectrum_sync.rs
src-tauri/src/state/: app_state.rs  mod.rs  tickers.rs
src-tauri/src/subscription/: manager.rs  mod.rs
src/components/: AboutModal.tsx  CodeEditor.tsx  CustomWidgetEditor.tsx  CustomWidgetEditorContainer.tsx  CustomWidgetHelpModal.tsx  NotificationToasts.tsx  SettingsModal.tsx  ThemeEditor.tsx  settingFields.ts
src/components/controls/: ButtonWidget.tsx  Checkbox.tsx  Knob.tsx  Label.tsx  Radio.tsx  Slider.tsx  binding.ts
src/components/displays/: AllTabContent.tsx  AxisSettings.tsx  CanFrameList.tsx  CanLoadView.tsx  CanSender.tsx  CanView.tsx  ChannelTabContent.tsx  CommandSender.tsx  CommandSenderBlockEditor.tsx  CompactChannelRow.tsx  CurveRenderControls.tsx  CustomWidget.tsx  DecodedEventList.tsx  FilterWidget.tsx  FrameDecoder.tsx  FrameDecoderBlockEditor.tsx  FrameDecoderLivePanel.tsx  FrameDecoderManualPanel.tsx  Gauge.tsx  ImageViewer.tsx  LED.tsx  LogicTimingChart.tsx  LogicView.tsx  MathWidget.tsx  MeasureItem.tsx  Model3DWidget.tsx  NumberDisplay.tsx  PieChart.tsx  RawDataRow.tsx  RawDataView.tsx  SpectrumChart.tsx  StepKnob.tsx  TableView.tsx  WaveformChart.tsx  WaveformChartCursorOverlay.tsx  WaveformCursorReadout.tsx  WaveformTimeline.tsx  canLoadViewShared.tsx  commandSenderShared.tsx  frameDecoderShared.tsx  (+8 more)
src/components/layout/: ActivityBar.tsx  AiPanel.tsx  BufferUsageStats.tsx  CanLoadAlarm.tsx  ControlPanel.tsx  DataPanel.tsx  NodeEditor.tsx  Sidebar.tsx  StatusBar.tsx
src/components/nodes/: ChannelSourceNode.tsx  WidgetNode.tsx
src/components/onboarding/: ContextualHint.tsx  HelpCenterModal.tsx  OnboardingWizard.tsx  TourOverlay.tsx  helpContent.tsx
src/components/panels/: PortConfig.tsx  PortPicker.tsx  ProtocolConfigPanel.tsx  ProtocolSection.tsx  TransportConfigPanel.tsx  WidgetPalette.tsx
src/components/ui/: ContextMenu.tsx  PanelTabs.tsx  ToolbarIconButton.tsx  WidgetCard.tsx
src/i18n/: index.ts
src/i18n/locales/: en.yml  zh.yml
src/lib/: canBuffer.ts  canSubscription.ts  checksum.ts  clipboard.ts  commandParser.ts  createWidget.ts  dataBuffer.ts  graphSubscription.ts  logicBuffer.ts  logicSubscription.ts  nodeDef.ts  notifications.ts  rawDataSubscription.ts  scopeUtils.ts  tauri.ts  useContextMenu.ts  useContextMenu.tsx  useGraphInput.ts  useSelection.ts  useWidgetInputValue.ts  widgetDataFlow.ts
src/settings/: applyTheme.ts  defaults.ts  theme.ts
src/store/: appStore.ts  appStoreHelpers.ts  canLoadAlarmStore.ts  contextMenuStore.ts  onboardingStore.ts  settingsStore.ts
src/store/slices/: connection.ts  (+9 more)
src/types/: can.ts  common.ts  frameDecoder.ts  index.ts  logic.ts  transport.ts  waveform.ts  widgets.ts
(+8 files in other folders)
