[package]
name = "vofa-next"
version = "0.1.0"
description = "Modern serial port assistant with VOFA protocol support"
authors = ["peng"]
edition = "2021"

[lib]
name = "vofa_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = ["crates/vofa-next-core", "crates/vofa-next-transport", "crates/vofa-next-protocol", "crates/vofa-next-buffer"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }
log = "0.4"
thiserror = "1"
anyhow = "1"
vofa-next-core = { path = "crates/vofa-next-core" }
vofa-next-transport = { path = "crates/vofa-next-transport" }
vofa-next-protocol = { path = "crates/vofa-next-protocol" }
vofa-next-buffer = { path = "crates/vofa-next-buffer" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
vofa-next-core = { workspace = true }
vofa-next-transport = { workspace = true }
vofa-next-protocol = { workspace = true }
vofa-next-buffer = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
parking_lot = "0.12"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
