[package]
name = "vofa-next"
version = "0.1.0"
description = "Modern serial port assistant with VOFA protocol support"
authors = ["peng"]
edition = "2021"

[lib]
name = "vofa_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = ["crates/vofa-next-core", "crates/vofa-next-transport", "crates/vofa-next-protocol", "crates/vofa-next-buffer", "crates/vofa-next-nodes", "crates/vofa-next-dsp", "crates/vofa-next-automotive"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.lints.clippy]
# 最严格 clippy 配置 — 所有规则组 deny
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"

# 合理放宽的规则 (风格偏好或无法控制的外部因素)
# 允许模块名与类型名重复 (如 config::Config, transport::Transport)
module_name_repetitions = "allow"
# 不强制每个函数标 must_use (过于激进)
must_use_candidate = "allow"
# 不强制返回 Result/Option 的函数有文档 (本项目非 pub API 库)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# 文档中标识符不强制加反引号
doc_markdown = "allow"
# 依赖版本冲突无法控制
multiple_crate_versions = "allow"
# 不要求 package 有完整 metadata (description/license 等)
cargo_common_metadata = "allow"
# 允许较多参数 (如配置初始化)
too_many_arguments = "allow"
# 允许 enum variant 名重复外层名
enum_glob_use = "allow"
# 允许使用 std::print (调试用)
print_stdout = "allow"
print_stderr = "allow"
# 允许大整数/浮点字面量不带下划线 (如波特率 115200)
unreadable_literal = "allow"
# 允许 match 同一变量
single_match_else = "allow"
# 允许 if-then-else 链 (比 match 更清晰时)
match_same_arms = "allow"
# 允许手动 clamp
manual_clamp = "allow"
# 允许结构体字段顺序不优化
struct_field_names = "allow"
# 允许较长的文档
doc_link_code = "allow"
# 允许 &Vec 参数 (与现有 API 兼容)
ptr_arg = "allow"
# 允许返回引用
needless_pass_by_value = "allow"
# 允许使用 format! 字符串
useless_format = "allow"
# 允许默认 trait 实现不显式
new_without_default = "allow"
# 允许较多方法 (impl 块)
too_many_lines = "allow"


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }
log = "0.4"
thiserror = "1"
anyhow = "1"
vofa-next-core = { path = "crates/vofa-next-core" }
vofa-next-transport = { path = "crates/vofa-next-transport" }
vofa-next-protocol = { path = "crates/vofa-next-protocol" }
vofa-next-buffer = { path = "crates/vofa-next-buffer" }
vofa-next-nodes = { path = "crates/vofa-next-nodes" }
vofa-next-dsp = { path = "crates/vofa-next-dsp" }
vofa-next-automotive = { path = "crates/vofa-next-automotive" }
libautomotive = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
vofa-next-core = { workspace = true }
vofa-next-transport = { workspace = true }
vofa-next-protocol = { workspace = true }
vofa-next-buffer = { workspace = true }
vofa-next-nodes = { workspace = true }
vofa-next-dsp = { workspace = true }
vofa-next-automotive = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
parking_lot = "0.12"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
