[package]
name = "vofa-next-transport"
version.workspace = true
edition.workspace = true

[dependencies]
vofa-next-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serialport = "4"
async-trait = "0.1"
parking_lot = "0.12"
nusb = "0.2"
