[package]
name = "serial-transport"
version.workspace = true
edition.workspace = true

[dependencies]
serial-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serialport = "4"
async-trait = "0.1"
parking_lot = "0.12"
