[package]
name = "vofa-next-automotive"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
vofa-next-core = { workspace = true }
vofa-next-transport = { workspace = true }
vofa-next-protocol = { workspace = true }
libautomotive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
parking_lot = "0.12"
