[package]
name = "vofa-next-nodes"
edition = "2021"
version = "0.1.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
vofa-next-core = { workspace = true }
vofa-next-buffer = { workspace = true }
vofa-next-dsp = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
